# fonti

./: .gitignore  README.md  Timeline.md  main.py  pyproject.toml
fonti/: __init__.py  cli.py  config.py  constants.py  downloader.py  google_fonts.py  installer.py  library.py  platform_utils.py  registry.py  types.py  uninstaller.py  updater.py
fontpm/: __init__.py  cli.py  config.py  constants.py  downloader.py  fonts.py  google_fonts.py  installer.py  library.py  types.py  uninstaller.py
tests/: test_cli.py  test_config.py  test_constants.py  test_downloader.py  test_fonts.py  test_google_fonts.py  test_installer.py  test_library.py  test_main.py  test_types.py  test_uninstaller.py  test_updater.py
