[project]
name = "fontpm"
version = "0.1.0"
description = "A CLI tool to manage fonts by downloading from GitHub releases"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Sacha Crispin", email = "hello@glypse.design" }]
dependencies = [
    "typer>=0.20.0",
    "httpx>=0.28.0",
    "rich>=14.0.0",
    "pyinstaller>=6.16.0",
    "fonttools>=4.60.1",
    "brotli>=1.2.0",
    "diskcache>=5.6.3",
    "platformdirs>=4.5.0",
    "cryptography>=46.0.3",
]

[dependency-groups]
dev = ["pytest>=6.0", "black>=22.0", "isort>=5.0", "ruff>=0.1.0"]

[project.scripts]
fontpm = "main:app"

[tool.uv]
package = true

[tool.black]
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ARG", # unused arguments
    "TC",  # type checker
]
